--- a/.github/workflows/Build-Kernel.yml
+++ b/.github/workflows/Build-Kernel.yml
@@ -37,6 +37,7 @@ on:
         options:
           - MKSU
           - KSUN
+          - SKSU
       VFS_ENABLED:
         description: "Enable VFS Hook"
         required: true
@@ -110,7 +111,11 @@ jobs:
           elif [ "${{ github.event.inputs.KSU_BRANCH }}" == "MKSU" ]; then
             echo "Adding KernelSU MKSU..."
             curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/main/kernel/setup.sh" | bash
-            cd KernelSU
+          elif [ "${{ github.event.inputs.kernelsu_variant }}" == "SKSU" ]; then
+            curl -LSs "https://raw.githubusercontent.com/ShirkNeko/KernelSU/main/kernel/setup.sh" | bash -s susfs-dev 
+          fi
+          if [ "${{ github.event.inputs.kernelsu_variant }}" != "Next" ]; then
+            cd ./KernelSU-Next
             KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
             echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
             sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
@@ -172,8 +177,8 @@ jobs:
           if [ "${{ github.event.inputs.KSU_BRANCH }}" == "KSUN" ]; then
              cp ../../kernel_patches4mksu/next/syscall_hooks.patch ./
              patch -p1 --forward < syscall_hooks.patch || true
-           elif [ "${{ github.event.inputs.KSU_BRANCH }}" == "MKSU" ]; then
-             echo "Applying SUSFS patches for MKSU..."
+           elif [ "${{ github.event.inputs.kernelsu_variant }}" != "Next" ]; then
+             echo "Applying SUSFS patches for KSU..."
              cp ../../kernel_patches4mksu/hooks/new_hooks.patch ./
              patch -p1 -F 3 < new_hooks.patch
            else
@@ -192,7 +197,9 @@ jobs:
             cd ../
           fi
           echo "Adding configuration settings to gki_defconfig..."
-
+          if [ "${{ github.event.inputs.kernelsu_variant }}" == "SKSU" ]; then
+            echo "CONFIG_KSU_VFS=y" >> ./common/arch/arm64/configs/gki_defconfig
+          fi
           # Add KSU configuration settings
           echo "CONFIG_KSU=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_WITH_KPROBES=n" >> ./common/arch/arm64/configs/gki_defconfig
