--- a/.github/workflows/Build-Kernel.yml
+++ b/.github/workflows/Build-Kernel.yml
@@ -37,7 +37,12 @@ on:
         options:
           - MKSU
           - KSUN
-          - SKSU
+          - SKSU-SUSFS
+      SUSFS_ENABLED:
+        description: "Enable SUSFS"
+        required: true
+        type: boolean
+        default: true          
       VFS_ENABLED:
         description: "Enable VFS Hook"
         required: true
@@ -123,6 +128,7 @@ jobs:
             sed -i "s/DKSU_VERSION=$DKSUVER/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
                  
       - name: Set up susfs
+        if: ${{ github.event.inputs.VFS_ENABLED == 'true' }}
         run: |
            cd kernel_workspace
            git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}
@@ -166,6 +172,7 @@ jobs:
             cd ..
            
       - name: Apply Hide Stuff Patches
+        if: ${{ github.event.inputs.VFS_ENABLED == 'true' }}
         run: |
           cd kernel_workspace/kernel_platform/common
           cp ../../kernel_patches4mksu/69_hide_stuff.patch ./
