--- a/.github/workflows/Build-Kernel.yml
+++ b/.github/workflows/Build-Kernel.yml
@@ -37,7 +37,7 @@ on:
         options:
           - MKSU
           - KSUN
-          - SKSU-SUSFS
+          - SKSU
       SUSFS_ENABLED:
         description: "Enable SUSFS"
         required: true
@@ -128,7 +128,7 @@ jobs:
             sed -i "s/DKSU_VERSION=$DKSUVER/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
                  
       - name: Set up susfs
-        if: ${{ github.event.inputs.VFS_ENABLED == 'true' }}
+        if: ${{ github.event.inputs.SUSFS_ENABLED == 'true' }}
         run: |
            cd kernel_workspace
            git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}
@@ -172,7 +172,7 @@ jobs:
             cd ..
            
       - name: Apply Hide Stuff Patches
-        if: ${{ github.event.inputs.VFS_ENABLED == 'true' }}
+        if: ${{ github.event.inputs.SUSFS_ENABLED == 'true' }}
         run: |
           cd kernel_workspace/kernel_platform/common
           cp ../../kernel_patches4mksu/69_hide_stuff.patch ./
@@ -194,7 +194,7 @@ jobs:
              exit 1
            fi
           
-      - name: Add SUSFS Configuration Settings
+      - name: Add SUSFS Configuration Settings For VFS HOOK
         if: ${{ github.event.inputs.VFS_ENABLED == 'true' }}
         run: |
           cd kernel_workspace/kernel_platform
@@ -235,12 +235,12 @@ jobs:
       - name: Build kernel 
         run: |
          cd kernel_workspace
-         #if [ -f "./kernel_platform/build_with_bazel.py" ]; then
-          #echo "build_with_bazel.py"
-          #./kernel_platform/build_with_bazel.py -t ${{ github.event.inputs.CPUD }} gki
-         #else
+         if [ -f "./kernel_platform/build_with_bazel.py" ]; then
+          echo "build_with_bazel.py"
+          ./kernel_platform/build_with_bazel.py -t ${{ github.event.inputs.CPUD }} gki
+         else
           LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{ github.event.inputs.CPUD }} gki
-         #fi
+         fi
 
       - name: Make AnyKernel3
         run: |
