--- a/.github/workflows/Build-Kernel.yml
+++ b/.github/workflows/Build-Kernel.yml
@@ -5,23 +5,23 @@ on:
       CPU:
         description: "分支"
         required: true
-        default: 'sm8475'
+        default: 'sm8550'
       CPUD:
         description: "处理器代号"
         required: true
-        default: 'waipio'
+        default: 'kalama'
       ANDROID_VERSION:
         description: "内核安卓版本"
         required: true
-        default: '12'
+        default: '13'
       KERNEL_VERSION:
         description: "内核版本"
         required: true
-        default: '5.10'
+        default: '5.15'
       FEIL:
         description: "机型/Model"
         required: true
-        default: 'oneplus_ace2_v'
+        default: 'oneplus_ace3_v'
       KSU_BRANCH:
         description: "KSU分支"
         required: true
@@ -59,8 +59,8 @@ jobs:
           
       - name: Configure Git
         run: |
-         git config --global user.name "build"
-         git config --global user.email "3436378798@qq.com"
+         git config --global user.name "RoyalDor-03"
+         git config --global user.email "kghj408@gmail.com"
          
       - name: Output build information
         run: |
